<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="userData"
            type="com.android.example.resoles_exer4_slambook.UserData" />
    </data>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="horizontal" android:id="@+id/ScrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/greeting_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/hello"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/q_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/qname" />

            <TextView
                android:id="@+id/name_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:text="@={userData.name}"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/nickname_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={userData.nickname}"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/age_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@={userData.age}"
                android:visibility="gone" />

            <EditText
                android:id="@+id/name_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:ems="10"
                android:hint="@string/ename"
                android:inputType="textPersonName"
                android:padding="4dp" />

            <TextView
                android:id="@+id/q_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/enickname" />

            <EditText
                android:id="@+id/nickname_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enickname"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/q_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/eage" />

            <TextView
                android:id="@+id/end"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/age_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/eage"
                android:inputType="number" />

            <TextView
                android:id="@+id/q_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/qbirthday" />

            <EditText
                android:id="@+id/birthday_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ebirthday"
                android:inputType="date" />

            <TextView
                android:id="@+id/q_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/qnumber" />

            <EditText
                android:id="@+id/number_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enumber"
                android:inputType="phone" />

            <TextView
                android:id="@+id/q_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/qemail" />

            <EditText
                android:id="@+id/email_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/eemail"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/q_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/qcourse" />

            <EditText
                android:id="@+id/course_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ecourse"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/q_dream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/qdream" />

            <EditText
                android:id="@+id/dream_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edream"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/q_crush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/qcrush" />

            <EditText
                android:id="@+id/crush_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ecrush"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/q_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/qmessage" />

            <EditText
                android:id="@+id/edit_message"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/done"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
</layout>